; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_resource.c_update_missing_exe.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_resource.c_update_missing_exe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@filename = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@GLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"BeginUpdateResource should fail\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @update_missing_exe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_missing_exe() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 @SetLastError(i32 -559038737)
  %3 = load i32, i32* @filename, align 4
  %4 = load i32, i32* @TRUE, align 4
  %5 = call i32* @BeginUpdateResourceA(i32 %3, i32 %4)
  store i32* %5, i32** %1, align 8
  %6 = call i32 (...) @GetLastError()
  store i32 %6, i32* @GLE, align 4
  %7 = load i32*, i32** %1, align 8
  %8 = icmp eq i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @ok(i32 %9, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i32* @BeginUpdateResourceA(i32, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @ok(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
